# riscv-isa-sim

./: .clangd  .gitignore  CMakeLists.txt  README.md  config.h.in  config.h.meson.in  flake.nix  meson.build  meson_options.txt  result
ci-tests/: build-spike-meson  test-spike-meson
cmake/: spikeConfig.cmake.in
customext/: dummy_rocc_test.c
disasm/: disasm.cc
riscv/: csrs.cc  decode.h  devices.h  processor.cc  processor.h  riscv_insn_list.txt  sim.cc  sim.h
riscv/insns/: ecall.h  mret.h
scripts/: gen_riscv_insns.py  run_all_tests.sh
softfloat/: softfloat_types.h
spike_main/: spike.cc
tests/: meson_test_dasm.sh  meson_test_log_parser.sh  run_ebreak_regression.sh  testlib.py
